Fix overflow issue

--- a/src/views/index/partials/github.sass
+++ b/src/views/index/partials/github.sass
@@ -13,7 +13,7 @@ section#repositories
             .card-header
                 justify-content: space-between
                 max-width: 100%
-                overflow: scroll
+                overflow: hidden
 
                 &:hover
                     text-decoration: underline
